--- a/index.html
+++ b/index.html
@@ -44,10 +44,20 @@
 				<!-- Header Button -->
 				<div class="header__button">Подробнее</div>
 
+				<!-- White Block -->
+				<div class="main__service__block">
+					<h2 class="main__service__title">Мы занимаемся</h2>
+					<span class="main__service__line"><hr class="service__line">&<hr class="service__line"></span>
+					<h4 class="main__service__subtitle">Built is the template designed specially for architectures and builders, So start building you web site with built.</h4>
+				</div>
+
 			</div>
 
 		<!-- end container -->
 		</div>
+
+
+
 	</header>
 	<!-- end of Header -->
 
@@ -60,12 +70,38 @@
 				<!-- Container -->
 			<div class="container">
 
-				<!-- White Block -->
-				<div class="main__service__block">
-					<h2 class="main__service__title">Мы занимаемся</h2>
-					<span class="main__service__line"><hr class="service__line">&<hr class="service__line"></span>
-					<h4 class="main__service__subtitle">Built is the template designed specially for architectures and builders, So start building you web site with built.</h4>
-				</div>
+
+
+				<!-- Services -->
+				<ul class="main__service__list">
+
+					<!-- Service Items -->
+					<li class="main__service__item">
+						<img src="https://image.flaticon.com/icons/svg/838/838618.svg" alt="Love " class="main__service__img">
+						<h4 class="main__service__item__title">Consulting</h4>
+						<p class="main__service__item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, molestias!</p>
+						<hr class="main__service__item__line">
+					</li>
+					<li class="main__service__item">
+						<img src="https://image.flaticon.com/icons/svg/838/838618.svg" alt="Love " class="main__service__img">
+						<h4 class="main__service__item__title">Consulting</h4>
+						<p class="main__service__item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, molestias!</p>
+						<hr class="main__service__item__line">
+					</li>
+					<li class="main__service__item">
+						<img src="https://image.flaticon.com/icons/svg/838/838618.svg" alt="Love " class="main__service__img">
+						<h4 class="main__service__item__title">Consulting</h4>
+						<p class="main__service__item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, molestias!</p>
+						<hr class="main__service__item__line">
+					</li>
+					<li class="main__service__item">
+						<img src="https://image.flaticon.com/icons/svg/838/838618.svg" alt="Love " class="main__service__img">
+						<h4 class="main__service__item__title">Consulting</h4>
+						<p class="main__service__item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, molestias!</p>
+						<hr class="main__service__item__line">
+					</li>
+
+				</ul>
 
 			</div>
 			</section>
