--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 
 					<!-- End of Service  -->
 
+
 				</div>
 
 			</div>
@@ -100,6 +101,48 @@
 	<main class="main">
 
 
+		<!-- BG LINE -->
+
+			<div class="main__bg-line"><h3 class="bg-line__text">Felis dolor integer facilisis habitasse a himenaeos urna aliquam taciti ipsum amet eleifend eros nulla.</h3></div>
+
+		<!-- end of BG Line -->
+
+
+		<!-- Main Gallery Section -->
+
+		<section class="main__gallery">
+
+			<div class="container">
+				<h2 class="main__service__title">Наше портфолио</h2>
+				<span class="main__service__line"><hr class="service__line">&<hr class="service__line"></span>
+				<h4 class="main__service__subtitle">Some of the projects we have done since it was founded.</h4>
+
+				<!-- Jquery Menu -->
+				<ul class="gallery__menu">
+					<li class="gallery__menu__item">Clothes</li>
+					<li class="gallery__menu__item">Clothes</li>
+					<li class="gallery__menu__item">Clothes</li>
+					<li class="gallery__menu__item">Clothes</li>
+					<li class="gallery__menu__item">Clothes</li>
+					<li class="gallery__menu__item">Clothes</li>
+				</ul>
+
+				<ul class="gallery__img__block">
+					<li class="gallery__img__item"><img src="./img/gallery/g1.jpg" width="230px"></li>
+					<li class="gallery__img__item"><img src="./img/gallery/g1.jpg" width="230px"></li>
+					<li class="gallery__img__item"><img src="./img/gallery/g1.jpg" width="230px"></li>
+					<li class="gallery__img__item"><img src="./img/gallery/g1.jpg" width="230px"></li>
+					<li class="gallery__img__item"><img src="./img/gallery/g1.jpg" width="230px"></li>
+					<li class="gallery__img__item"><img src="./img/gallery/g1.jpg" width="230px"></li>
+					<li class="gallery__img__item"><img src="./img/gallery/g1.jpg" width="230px"></li>
+					<li class="gallery__img__item"><img src="./img/gallery/g1.jpg" width="230px"></li>
+				</ul>
+
+				<h3>View All Project ></h3>
+			</div>
+
+		</section>
+		<!-- end of Main Gallery Section -->
 
 
 	</main>
