--- a/index.html
+++ b/index.html
@@ -138,11 +138,42 @@
 					<li class="gallery__img__item"><img src="./img/gallery/g1.jpg" width="230px"></li>
 				</ul>
 
-				<h3>View All Project ></h3>
+				<h3 class="main__gallery__view-all">Lorem ipsum dolor >>></h3>
 			</div>
 
 		</section>
 		<!-- end of Main Gallery Section -->
+
+
+	<!-- Partners Section -->
+	<section class="main__partners">
+		<div class="container">
+
+		<ul class="partners__list">
+			<li class="partners__list__item"><img src="./img/logos/1.jpg" alt=""></li>
+			<li class="partners__list__item"><img src="./img/logos/2.jpg" alt=""></li>
+			<li class="partners__list__item"><img src="./img/logos/3.jpg" alt=""></li>
+			<li class="partners__list__item"><img src="./img/logos/4.jpg" alt=""></li>
+
+		</ul>
+
+	</div>
+	</section>
+	<!-- End of Partners Section -->
+
+
+	<!-- About Section -->
+	<section class="main__about">
+
+		<div class="container">
+			<h2 class="main__service__title">Мы занимаемся</h2>
+			<span class="main__service__line"><hr class="service__line">&<hr class="service__line"></span>
+			<img src="./img/vladimir.jpg" alt="Vladimir" class="main__about__img">
+		</div>
+
+	</section>
+	<!-- End of About Section -->
+
 
 
 	</main>
@@ -159,5 +190,6 @@
 		integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
 		crossorigin="anonymous"></script>
 	<script src="./js/script.js"></script>
+	<script src="http://127.0.0.1:35729/livereload.js?ext=Firefox&amp;extver=20.3.0"></script>
 </body>
 </html>
