--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	<meta charset="UTF-8">
 	<title>The Churchill Shop</title>
 	<!-- <link rel="stylesheet" href="./css/reset.css"> -->
-
 	<link rel="stylesheet" href="./css/normalize.css">
-
 	<link rel="stylesheet" href="./css/main.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
 </head>
 <body>
 	<!-- Header -->
@@ -44,49 +44,6 @@
 				<!-- Header Button -->
 				<div class="header__button">Подробнее</div>
 
-				<!-- White Block -->
-				<div class="main__service__block">
-					<h2 class="main__service__title">Мы занимаемся</h2>
-					<span class="main__service__line"><hr class="service__line">&<hr class="service__line"></span>
-					<h4 class="main__service__subtitle">Built is the template designed specially for architectures and builders, So start building you web site with built.</h4>
-
-					<!-- Service Section -->
-
-						<section class="main__service">
-
-							<!-- Services List -->
-							<ul class="main__service__list">
-
-								<!-- Service Items -->
-								<li class="main__service__item">
-									<img src="https://image.flaticon.com/icons/svg/838/838618.svg" alt="Love " class="main__service__img">
-									<h4 class="main__service__item__title">Consulting</h4>
-									<p class="main__service__item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, molestias!</p>
-									<hr class="main__service__item__line">
-								</li>
-								<li class="main__service__item">
-									<img src="https://image.flaticon.com/icons/svg/838/838618.svg" alt="Love " class="main__service__img">
-									<h4 class="main__service__item__title">Consulting</h4>
-									<p class="main__service__item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, molestias!</p>
-									<hr class="main__service__item__line">
-								</li>
-								<li class="main__service__item">
-									<img src="https://image.flaticon.com/icons/svg/838/838618.svg" alt="Love " class="main__service__img">
-									<h4 class="main__service__item__title">Consulting</h4>
-									<p class="main__service__item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, molestias!</p>
-									<hr class="main__service__item__line">
-								</li>
-
-							</ul>
-							<!-- End of Service List -->
-
-						</section>
-
-					<!-- End of Service  -->
-
-
-				</div>
-
 			</div>
 
 		<!-- end container -->
@@ -100,6 +57,49 @@
 	<!-- Main -->
 	<main class="main">
 
+		<!-- White Block -->
+		<div class="main__service__block">
+			<h2 class="main__service__title">Мы занимаемся</h2>
+			<span class="main__service__line"><hr class="service__line">&<hr class="service__line"></span>
+			<h4 class="main__service__subtitle">Built is the template designed specially for architectures and builders, So start building you web site with built.</h4>
+
+			<!-- Service Section -->
+
+				<section class="main__service">
+
+					<!-- Services List -->
+					<ul class="main__service__list">
+
+						<!-- Service Items -->
+						<li class="main__service__item">
+							<img src="https://image.flaticon.com/icons/svg/838/838618.svg" alt="Love " class="main__service__img">
+							<h4 class="main__service__item__title">Consulting</h4>
+							<p class="main__service__item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, molestias!</p>
+							<hr class="main__service__item__line">
+						</li>
+						<li class="main__service__item">
+							<img src="https://image.flaticon.com/icons/svg/838/838618.svg" alt="Love " class="main__service__img">
+							<h4 class="main__service__item__title">Consulting</h4>
+							<p class="main__service__item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, molestias!</p>
+							<hr class="main__service__item__line">
+						</li>
+						<li class="main__service__item">
+							<img src="https://image.flaticon.com/icons/svg/838/838618.svg" alt="Love " class="main__service__img">
+							<h4 class="main__service__item__title">Consulting</h4>
+							<p class="main__service__item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, molestias!</p>
+							<hr class="main__service__item__line">
+						</li>
+
+					</ul>
+					<!-- End of Service List -->
+
+				</section>
+
+			<!-- End of Service  -->
+
+
+		</div>
+		<!--end of White Block -->
 
 		<!-- BG LINE -->
 
@@ -166,13 +166,33 @@
 	<section class="main__about">
 
 		<div class="container">
-			<h2 class="main__service__title">Мы занимаемся</h2>
+			<h2 class="main__service__title">Руководитель проекта</h2>
 			<span class="main__service__line"><hr class="service__line">&<hr class="service__line"></span>
-			<img src="./img/vladimir.jpg" alt="Vladimir" class="main__about__img">
+			<img src="./img/about/vladimir.jpg" alt="Vladimir" class="main__about__img">
+			<p class="main__about__text">Владимир Гуревич</p>
 		</div>
 
 	</section>
 	<!-- End of About Section -->
+
+
+	<!-- Instagram Section -->
+	<section class="main__instagram">
+
+	<div class="container">
+		<h2 class="main__service__title">Instagram</h2>
+		<span class="main__service__line"><hr class="service__line">&<hr class="service__line"></span>
+
+		<ul class="main__instagram__list">
+			<a class="main__instagram__item" href="#"><img src="./img/insta.jpg" alt="Instagram"></a>
+			<a class="main__instagram__item" href="#"><img src="./img/insta.jpg" alt="Instagram"></a>
+			<a class="main__instagram__item" href="#"><img src="./img/insta.jpg" alt="Instagram"></a>
+			<a class="main__instagram__item" href="#"><img src="./img/insta.jpg" alt="Instagram"></a>
+		</ul>
+	</div>
+
+	</section>
+	<!-- End of Instagram Section -->
 
 
 
@@ -180,7 +200,22 @@
 	<!-- end of Main -->
 
 	<!-- Footer -->
-	<footer>
+	<footer class="footer">
+
+
+
+			<div class="container">
+
+				<img src="./img/logos/3.jpg" alt="" class="footer__img">
+				<div class="footer__social">
+					<li class="footer__social__item">1</li>
+					<li class="footer__social__item">2</li>
+					<li class="footer__social__item">3</li>
+					<li class="footer__social__item">4</li>
+				</div>
+				<span>Copyright 2018</span>
+
+		</div>
 
 	</footer>
 	<!-- End of Footer -->
