--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 	<main class="main">
 
 		<!-- White Block -->
-		<div class="main__service__block">
+		<!-- <div class="main__service__block"> -->
+		<div class="container">
 			<h2 class="main__service__title">Мы занимаемся</h2>
 			<span class="main__service__line"><hr class="service__line">&<hr class="service__line"></span>
 			<h4 class="main__service__subtitle">Built is the template designed specially for architectures and builders, So start building you web site with built.</h4>
@@ -98,12 +99,17 @@
 			<!-- End of Service  -->
 
 
+		<!-- </div> -->
 		</div>
 		<!--end of White Block -->
 
 		<!-- BG LINE -->
 
-			<div class="main__bg-line"><h3 class="bg-line__text">Felis dolor integer facilisis habitasse a himenaeos urna aliquam taciti ipsum amet eleifend eros nulla.</h3></div>
+				<div class="main__bg-line">
+					<div class="container">
+						<h3 class="bg-line__text">Felis dolor integer facilisis habitasse a himenaeos urna aliquam taciti ipsum amet eleifend eros nulla.</h3>
+					</div>
+				</div>
 
 		<!-- end of BG Line -->
 
