--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	<!-- end of Header -->
 
 	<!-- Main -->
-	<main class="main">
+	<main id="main" class="main">
 
 		<!-- White Block -->
 		<!-- <div class="main__service__block"> -->
