--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
 
 						<!-- Service Items -->
 						<li class="main__service__item">
-							<img src="https://image.flaticon.com/icons/svg/838/838618.svg" alt="Love " class="main__service__img">
+							<img src="./img/services/bowtie.svg" alt="Love" class="main__service__img">
 							<h4 class="main__service__item__title">Consulting</h4>
 							<p class="main__service__item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, molestias!</p>
 							<hr class="main__service__item__line">
 						</li>
 						<li class="main__service__item">
-							<img src="https://image.flaticon.com/icons/svg/838/838618.svg" alt="Love " class="main__service__img">
+							<img src="./img/services/tie.svg" alt="Love " class="main__service__img">
 							<h4 class="main__service__item__title">Consulting</h4>
 							<p class="main__service__item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, molestias!</p>
 							<hr class="main__service__item__line">
 						</li>
 						<li class="main__service__item">
-							<img src="https://image.flaticon.com/icons/svg/838/838618.svg" alt="Love " class="main__service__img">
+							<img src="./img/services/cufflinks.svg" alt="Love " class="main__service__img">
 							<h4 class="main__service__item__title">Consulting</h4>
 							<p class="main__service__item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, molestias!</p>
 							<hr class="main__service__item__line">
