--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<div class="header__content">
 
 				<h1 class="header__content__title">The Churchill Shop</h1>
-				<h2 class="header__content__subtitle">Мы вам рады!</h2>
+				<!-- <h2 class="header__content__subtitle">Мы вам рады!</h2> -->
 
 				<!-- Header Button -->
 				<a href="#main"><span class="header__button">Подробнее</span></a>
@@ -74,19 +74,19 @@
 						<!-- Service Items -->
 						<li class="main__service__item">
 							<img src="./img/services/bowtie.svg" alt="Love" class="main__service__img">
-							<h4 class="main__service__item__title">Consulting</h4>
+							<h4 class="main__service__item__title">Бабочки</h4>
 							<p class="main__service__item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, molestias!</p>
 							<hr class="main__service__item__line">
 						</li>
 						<li class="main__service__item">
 							<img src="./img/services/tie.svg" alt="Love " class="main__service__img">
-							<h4 class="main__service__item__title">Consulting</h4>
+							<h4 class="main__service__item__title">Галстуки</h4>
 							<p class="main__service__item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, molestias!</p>
 							<hr class="main__service__item__line">
 						</li>
 						<li class="main__service__item">
 							<img src="./img/services/cufflinks.svg" alt="Love " class="main__service__img">
-							<h4 class="main__service__item__title">Consulting</h4>
+							<h4 class="main__service__item__title">Запонки</h4>
 							<p class="main__service__item__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, molestias!</p>
 							<hr class="main__service__item__line">
 						</li>
@@ -206,13 +206,13 @@
 
 			<div class="container">
 
-				<img src="./img/logo/chr_main.svg" alt="Logo" class="footer__img">
 				<div class="footer__social">
 					<a href="#" target="_blank"><li><i class="fa fa-facebook-square"></i></li></a>
 					<a href="#" target="_blank"><li><i class="fa fa-instagram"></i></li></a>
 					<a href="#"><li><i class="fa fa-flickr"></i></li></a>
 					<a href="#"><li><i class="fa fa-pinterest"></i></li></a>
 				</div>
+				<img src="./img/logo/chr_main.svg" alt="Logo" class="footer__img">
 				<span>Copyright 2018</span>
 
 		</div>
