--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<!-- <h2 class="header__content__subtitle">Мы вам рады!</h2> -->
 
 				<!-- Header Button -->
-				<a href="#main"><span class="header__button">Подробнее</span></a>
+				<span id="scrollButton"><a href="#main"><span class="header__button">Подробнее</span></a></span>
 
 			</div>
 
@@ -160,10 +160,10 @@
 		<div class="container">
 
 		<ul class="partners__list">
-			<li class="partners__list__item"><img src="./img/logos/1.jpg" alt=""></li>
-			<li class="partners__list__item"><img src="./img/logos/2.jpg" alt=""></li>
-			<li class="partners__list__item"><img src="./img/logos/3.jpg" alt=""></li>
-			<li class="partners__list__item"><img src="./img/logos/4.jpg" alt=""></li>
+			<li class="partners__list__item"><a href="https://www.kupivip.ru/brands/churchill_accessories" target="_blank"><img src="./img/logos/1.jpg" alt=""></a></li>
+			<li class="partners__list__item"><a href="https://www.lamoda.ru/b/26333/brand-churchill-accessories/" target="_blank"><img src="./img/logos/2.jpg" alt=""></a></li>
+			<li class="partners__list__item"><a href="#" target="_blank"><img src="./img/logos/3.jpg" alt=""></a></li>
+			<li class="partners__list__item"><a href="https://www.wildberries.ru/brands/churchill-accessories" target="_blank"><img src="./img/logos/4.jpg" alt=""></a></li>
 
 		</ul>
 
@@ -255,6 +255,7 @@
 
 
 			<div class="container">
+				<img src="./img/logo/chr_main.svg" alt="Logo" class="footer__img">
 
 				<div class="footer__social">
 					<a href="#" target="_blank"><li><i class="fab fa-facebook"></i>
@@ -264,7 +265,6 @@
 					<!-- <a href="#"><li><i class="fa fa-flickr"></i></li></a>
 					<a href="#"><li><i class="fa fa-pinterest"></i></li></a> -->
 				</div>
-				<img src="./img/logo/chr_main.svg" alt="Logo" class="footer__img">
 				<span>Copyright 2018</span>
 
 		</div>
