--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 					<li class="header__nav__item header__nav__item__current"><a href="#main" class="header__nav__link">Главная</a></li>
 					<li class="header__nav__item"><a href="#main" class="header__nav__link">Направления</a></li>
 					<li class="header__nav__item"><a href="#gallery" class="header__nav__link">Галерея</li></a>
-					<li class="header__nav__item"><a href="#about" class="header__nav__link">О нас</a></li>
-					<li class="header__nav__item"><a href="#main" class="header__nav__link">Контакты</a></li>
+					<li class="header__nav__item"><a href="#about" class="header__nav__link">Контакты</a></li>
+					<!-- <li class="header__nav__item"><a href="#main" class="header__nav__link">Контакты</a></li> -->
 				</ul>
 			</nav>
 			<span id="toggleButton" class="header__toggle"><i class="fas fa-bars"></i></span>
